--- a/src/app/movies/list-component/list-component.component.css
+++ b/src/app/movies/list-component/list-component.component.css
@@ -1,7 +1,28 @@
+.peliculas-contenedor{
+    display: flex;
+    flex-wrap:wrap;
+    flex-direction:row;
+    align-items: center;
+}
 
-.contein-movies{
-    border: 1px solid black;
-    margin-bottom: 1rem;
-    padding: 1rem;
+.pelicula-contenedor{
+    margin-right: 2%;
+    margin-bottom: 10px;
+    text-align: center;
+}
 
+p{
+    max-width: 225px;
+    height: 44px;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+image {
+    width: 225px;
+    height: 300px;
+}
+
+button{
+    margin-left: 1em;
 }
