--- a/src/app/movies/list-component/list-component.component.html
+++ b/src/app/movies/list-component/list-component.component.html
@@ -1,26 +1,29 @@
 <app-listado-generico [listado]="movies">
-  <ng-container vacio>
-    <div>Mensaje personalizado para contenido <b>Vacio</b></div>
-  </ng-container>
-  <ng-container contenido>
 
+  <ng-container contenido>
+<div class = "peliculas-contenedor">
    <div 
       *ngFor= "let movie of movies; let index = index " 
       class="contein-movies"
     >
-      <div> 
-        <h2>movie{{index}}::{{movie.title }}
-        <button style="margin-left: 1rem;" (click)="remover(index)">
-          Remover
-        </button>
-      </h2>
-       </div>
+      <a>
+        <img [src] ="movie.poster" alt="Poster"/>
+      </a>
+      <p>
+        <a>{{movie.title}}</a>
+      </p>
       <div>
-        {{movie.releaseDate | date:"dd-MMMM-yyyy"}}
-      </div>
-      <div>
-        {{movie.price | currency}}
+        <a mat-flat-button color="primary">
+          Editar
+        </a>
+        <button
+        mat-flat-button
+        color="warn"
+        type="button">
+      Borrar
+    </button>
       </div>
     </div>
+</div>
   </ng-container>
 </app-listado-generico>
