--- a/src/app/utilidades/listado-generico/listado-generico.component.html
+++ b/src/app/utilidades/listado-generico/listado-generico.component.html
@@ -3,9 +3,9 @@
   <span #cargando>
     <ng-content select="[cargando]"></ng-content>
   </span>
-  <span *ngIf="!cargando.innerHTML.trim()">
+  <!--<span *ngIf="!cargando.innerHTML.trim()">
     <img src="https://upload.wikimedia.org/wikipedia/commons/b/b1/Loading_icon.gif?20151024034921.gif"/>
-  </span>
+  </span>-->
   </div>
   
   <div *ngIf="listado?.length === 0">
