--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,10 @@
 <app-menu> </app-menu>
 <app-list-component></app-list-component>
 <div >
-
-
 <input type ="file" style="display: none" #cargador>
 <button (click)="cargador.click()">Cargar Archivo</button>
+</div>
 
-<h2> En cines  </h2>
-<app-list-component [movies]="moviesEnCines"></app-list-component>
-
-
-<h2> Futuros estrenos</h2>
-<app-list-component [movies]="moviesProxEstrenos"></app-list-component> 
+<div class="contenedor">
+    <router-outlet></router-outlet>
 </div>
