Reglas de ruteo

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,9 +1,12 @@
 <mat-toolbar color="primary">
     <span>
-        <a mat-button > 
+        <a routerLink= "" mat-button > 
             <mat-icon>theaters</mat-icon> Angular Peliculas
         </a>
     </span>
 
+    <div>
+        <a mat-button routerLink="generos">Generos</a>
+    </div>
 </mat-toolbar>
 
