--- a/src/app/generos/indice-generos/indice-generos.component.html
+++ b/src/app/generos/indice-generos/indice-generos.component.html
@@ -1,1 +1,3 @@
-<p>indice-generos works!</p>
+<h2>Generos</h2>
+
+<button mat-flat-button color="primary" routerLink="/generos/crear">Crear nuevo</button>
