--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -8,5 +8,15 @@
     <div>
         <a mat-button routerLink="generos">Generos</a>
     </div>
+    <div>
+        <a mat-button routerLink="actores">Actores </a>
+    </div>
+    <div>
+        <a mat-button routerLink="cines">Cines</a>
+    </div>
+    <div>
+        <a mat-button routerLink="peliculas/crear">Crear Peliculas</a>
+    </div>
+    
 </mat-toolbar>
 
