--- a/src/app/generos/crear-genero/crear-genero.component.html
+++ b/src/app/generos/crear-genero/crear-genero.component.html
@@ -4,9 +4,10 @@
     <mat-form-field appearance = "outline">
         <mat-label>Nombre *</mat-label>
         <input formControlName ="nombre" matInput/>
+        <mat-error *ngIf="form.invalid">{{obtenerErrorCampoNombre()}}</mat-error>
     </mat-form-field>
     <div>
-        <button mat-flat-button color="primary">
+        <button mat-flat-button color="primary" [disabled]="form.invalid">  
             Guardar Cambios
         </button>
         <a mat-stroked-button routerLink="/generos">
