Editar generos sin bd

--- a/src/app/generos/editar-genero/editar-genero.component.html
+++ b/src/app/generos/editar-genero/editar-genero.component.html
@@ -1,1 +1,5 @@
-<p>editar-genero works!</p>
+<p>Editar Genero</p>
+
+<app-formulario-genero 
+[modelo]="modelo"
+(Onsubmit)="guardarCambios($event)"></app-formulario-genero>
