--- a/src/app/generos/crear-genero/crear-genero.component.html
+++ b/src/app/generos/crear-genero/crear-genero.component.html
@@ -1,18 +1,3 @@
 <!--<button mat-flat-button color="primary" type="button" (click)="guardarCambios()"> Guardar cambios</button>-->
 <h2>Crear género </h2>
-<form (submit)="guardarCambios()" [formGroup]="form">
-    <mat-form-field appearance = "outline">
-        <mat-label>Nombre*</mat-label>
-        <input formControlName ="nombre" matInput/>
-        <mat-error *ngIf="form.invalid">{{obtenerErrorCampoNombre()}}</mat-error>
-    </mat-form-field>
-    <div>
-        <button mat-flat-button color="primary" [disabled]="form.invalid">  
-            Guardar Cambios
-        </button>
-
-        <a mat-stroked-button routerLink="/generos">
-            Cancelar
-        </a>
-    </div>
-</form> 
+<app-formulario-genero (Onsubmit)="guardarCambios($event)"></app-formulario-genero>
