--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,18 +4,31 @@
             <mat-icon>theaters</mat-icon> Angular Peliculas
         </a>
     </span>
+    <div>
+        <a mat-button routerLink="peliculas/buscar">
+        <mat-icon>search</mat-icon>Buscar Peliculas</a>
+
+        
+        
+    </div>
 
     <div>
-        <a mat-button routerLink="generos">Generos</a>
+        <a mat-button routerLink="generos">
+        <mat-icon>star_half</mat-icon>Generos</a>
+        
     </div>
     <div>
-        <a mat-button routerLink="actores">Actores </a>
+        <a mat-button routerLink="actores"> 
+        <mat-icon>person</mat-icon>Actores</a>
     </div>
     <div>
-        <a mat-button routerLink="cines">Cines</a>
+        <a mat-button routerLink="cines">
+            <mat-icon>theater_comedy</mat-icon>Cines</a>
     </div>
     <div>
-        <a mat-button routerLink="peliculas/crear">Crear Peliculas</a>
+        <a mat-button routerLink="peliculas/crear">
+        <mat-icon>movie_edit</mat-icon>Crear Peliculas</a>
+        
     </div>
     
 </mat-toolbar>
