--- a/src/app/movies/list-component/list-component.component.html
+++ b/src/app/movies/list-component/list-component.component.html
@@ -10,7 +10,7 @@
         <img [src] ="movie.poster" alt="Poster"/>
       </a>
       <p>
-        <a>{{movie.title}}</a>
+        <a>{{movie.titulo}}</a>
       </p>
       <div>
         <a mat-flat-button color="primary">
