--- a/src/app/peliculas/filtro-peliculas/filtro-peliculas.component.html
+++ b/src/app/peliculas/filtro-peliculas/filtro-peliculas.component.html
@@ -3,7 +3,7 @@
 <form [formGroup]="form">
     <mat-form-field appearance ="outline">
         <mat-label>Titulo</mat-label>
-        <input formControlName="title" matInput />
+        <input formControlName="titulo" matInput />
     </mat-form-field>
 
 
