--- a/src/app/movies/list-component/list-component.component.css
+++ b/src/app/movies/list-component/list-component.component.css
@@ -13,9 +13,7 @@
     
 }
 
-img{
-    max-width: 80%;
-}
+
 p{
     max-width: 225px;
     height: 44px;
@@ -23,10 +21,10 @@ p{
     font-weight: bold;
 }
 
-image {
+img {
     width: 225px;
     height: 300px;
-	object-fit: cover
+	object-fit: cover;
 }
 
 button{
