--- a/src/app/movies/list-component/list-component.component.html
+++ b/src/app/movies/list-component/list-component.component.html
@@ -4,7 +4,7 @@
 <div class = "peliculas-contenedor">
    <div 
       *ngFor= "let movie of movies; let index = index " 
-      class="contein-movies"
+      class="peliculas-contenedor"
     >
       <a>
         <img [src] ="movie.poster" alt="Poster"/>
