--- a/src/app/actores/crear-actor/crear-actor.component.html
+++ b/src/app/actores/crear-actor/crear-actor.component.html
@@ -1,1 +1,3 @@
-<p>crear-actor works!</p>
+<h2>Crear actor</h2>
+
+<app-formulario-actores (submit)="guardarCambios($event)"></app-formulario-actores>
