--- a/src/app/actores/editar-actor/editar-actor.component.html
+++ b/src/app/actores/editar-actor/editar-actor.component.html
@@ -1,1 +1,3 @@
-<p>editar-actor works!</p>
+<h2>Editar Actores</h2>
+
+<app-formulario-actores [modelo]="modelo" (submit)="guardarCambios($event)"></app-formulario-actores>
