--- a/src/app/actores/formulario-actores/formulario-actores.component.html
+++ b/src/app/actores/formulario-actores/formulario-actores.component.html
@@ -11,6 +11,12 @@
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
+
+    <app-input-img></app-input-img>
+
+
+
+    
     <div>
         <button mat-flat-button color="primary" [disabled]="form.invalid">
             Guardar cambios 
