Formulario  con markdown

--- a/src/app/utilidades/input-img/input-img.component.html
+++ b/src/app/utilidades/input-img/input-img.component.html
@@ -4,12 +4,16 @@
     </button>
     <input type="file"
     hidden
-    #fileInput/>
+    #fileInput
     (change)="change($event)"
+    />
 </div>
 
-<div>
+<div >
     <div *ngIf="imagenBase64">
         <img [src]="imagenBase64"/>
+    </div>
+    <div *ngIf="urlImagenActual">
+        <img [src]="urlImagenActual"/>
     </div>
 </div>
