--- a/src/app/actores/formulario-actores/formulario-actores.component.html
+++ b/src/app/actores/formulario-actores/formulario-actores.component.html
@@ -12,9 +12,10 @@
         <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
 
-    <app-input-img></app-input-img>
-
-
+    <app-input-img [urlImagenActual]="modelo?.foto" (archivoSeleccionado)="archivoSeleccionado($event)"></app-input-img>
+    
+    <app-input-markdown (changeMarkdown)="cambioMarkdown($event)"></app-input-markdown>
+   
 
     
     <div>
