--- a/src/app/actores/formulario-actores/formulario-actores.component.html
+++ b/src/app/actores/formulario-actores/formulario-actores.component.html
@@ -14,7 +14,8 @@
 
     <app-input-img [urlImagenActual]="modelo?.foto" (archivoSeleccionado)="archivoSeleccionado($event)"></app-input-img>
     
-    <app-input-markdown (changeMarkdown)="cambioMarkdown($event)"></app-input-markdown>
+    <app-input-markdown [placeHolderTextarea]="'Biografia'"
+    (changeMarkdown)="cambioMarkdown($event)"></app-input-markdown>
    
 
     
