--- a/src/app/cines/formulario-cine/formulario-cine.component.html
+++ b/src/app/cines/formulario-cine/formulario-cine.component.html
@@ -5,7 +5,12 @@
         <mat-error *ngIf="form.invalid">El campo del nombre es requerido</mat-error>
     </mat-form-field>
 
-    <app-mapa></app-mapa>
+    <h4>Seleccione el cine en el mapa</h4>
+    <app-mapa
+        (coordenadasSeleccionada)="coordenadasSeleccionada($event)"
+        [coordenadasIniciales] = "coordenadasIniciales"
+>
+    </app-mapa>
 
     <div>
         <button mat-flat-button color="primary" [disabled]="form.invalid">
