--- a/src/app/peliculas/crear-pelicula/crear-pelicula.component.html
+++ b/src/app/peliculas/crear-pelicula/crear-pelicula.component.html
@@ -1,1 +1,3 @@
-<p>crear-pelicula works!</p>
+<h2>Crear peliculas</h2>
+
+<app-formulario-pelicula (OnSubmit)="guardarCambios($event)"></app-formulario-pelicula>
