--- a/src/app/peliculas/formulario-pelicula/formulario-pelicula.component.html
+++ b/src/app/peliculas/formulario-pelicula/formulario-pelicula.component.html
@@ -39,6 +39,20 @@
     [Seleccionados]="generosSeleccionados"
     [Noseleccionados]="generosNoSeleccionados"></app-selector-multiple>
 
+
+
+    <h4>Selecione los cines </h4>
+    <app-selector-multiple 
+    [Seleccionados]="cinesSeleccionados"
+    [Noseleccionados]="cinesNoSeleccionados"></app-selector-multiple>
+
+
+
+    <h4>Seleccione los actores</h4>
+    <app-autocomplete-actores></app-autocomplete-actores>
+
+
+    
     <div>
         <button mat-flat-button color="primary" [disabled]="form.invalid">
             Guardar Cambios
