--- a/src/app/actores/formulario-actores/formulario-actores.component.html
+++ b/src/app/actores/formulario-actores/formulario-actores.component.html
@@ -1,3 +1,5 @@
+<app-mostrar-errores [errores]="errores"></app-mostrar-errores>
+
 <form (submit)="Onsubmit()" [formGroup]="form">
     <mat-form-field appearance="outline">
         <mat-label>Nombre*</mat-label>
@@ -7,14 +9,16 @@
 
     <mat-form-field appearance="outline">
         <mat-label>Fecha de nacimiento</mat-label>
-        <input formControlName="fechaNacimineto" matInput [matDatepicker]="picker" />
+        <input formControlName="fechaNacimiento" matInput [matDatepicker]="picker" />
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
 
     <app-input-img [urlImagenActual]="modelo?.foto" (archivoSeleccionado)="archivoSeleccionado($event)"></app-input-img>
     
-    <app-input-markdown [placeHolderTextarea]="'Biografia'"
+    <app-input-markdown 
+    [contenidoMarkdown]="modelo?.biografia"
+    [placeHolderTextarea]="'Biografia'"
     (changeMarkdown)="cambioMarkdown($event)"></app-input-markdown>
    
 
