--- a/src/app/generos/editar-genero/editar-genero.component.html
+++ b/src/app/generos/editar-genero/editar-genero.component.html
@@ -1,5 +1,11 @@
 <p>Editar Genero</p>
 
-<app-formulario-genero 
+<app-formulario-genero *ngIf = "modelo"
 [modelo]="modelo"
+[errores]="errores"
 (Onsubmit)="guardarCambios($event)"></app-formulario-genero>
+
+
+<mat-spinner *ngIf="!modelo">
+
+</mat-spinner>
