--- a/src/app/peliculas/crear-pelicula/crear-pelicula.component.html
+++ b/src/app/peliculas/crear-pelicula/crear-pelicula.component.html
@@ -1,3 +1,10 @@
 <h2>Crear peliculas</h2>
 
-<app-formulario-pelicula (OnSubmit)="guardarCambios($event)"></app-formulario-pelicula>
+<app-formulario-pelicula 
+*ngIf="cinesNoSeleccionados"
+[errores]="errores"
+[generosNoSeleccionados]="generosNoSeleccionados"
+[cinesNoSeleccionados]="cinesNoSeleccionados"
+(OnSubmit)="guardarCambios($event)"></app-formulario-pelicula>
+
+<mat-spinner *ngIf="!cinesNoSeleccionados"></mat-spinner>
