--- a/src/app/peliculas/formulario-pelicula/formulario-pelicula.component.html
+++ b/src/app/peliculas/formulario-pelicula/formulario-pelicula.component.html
@@ -1,3 +1,5 @@
+<app-mostrar-errores [errores]="errores"></app-mostrar-errores>
+
 <form (submit)="guardarCambios()" [formGroup]="form">
     <mat-form-field appearance="outline">
         <mat-label>Titulo*</mat-label>
@@ -49,7 +51,9 @@
 
 
     <h4>Seleccione los actores</h4>
-    <app-autocomplete-actores></app-autocomplete-actores>
+    <app-autocomplete-actores
+    [actoresSeleccionados]="actoresSeleccionados"
+    ></app-autocomplete-actores>
 
 
     
